Project

General

Profile

Actions

Bug #42869

closed

Tempest tests for X-Remove-Container-Meta-test-container-meta failing

Added by Daniel Gryniewicz over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
rgw
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The tempest tests checking X-Remove-Container-Meta-test-container-meta fail in teuthology:

tempest.api.object_storage.test_container_services.ContainerTest.test_create_container_with_remove_metadata_key[id-24d16451-1c0c-4e4f-b59c-9840a3aba40e]
--------------------------------------------------------------------------------------------------------------------------------------------------------

Captured traceback:
~~~~~~~~~~~~~~~~~
Traceback (most recent call last):
File "/home/ubuntu/cephtest/tempest/tempest/api/object_storage/test_container_services.py", line 98, in test_create_container_with_remove_metadata_key
self.assertNotIn('x-container-meta-test-container-meta', resp)
File "/home/ubuntu/cephtest/tempest/.tox/venv/lib/python2.7/site-packages/testtools/testcase.py", line 455, in assertNotIn
self.assertThat(haystack, matcher, message)
File "/home/ubuntu/cephtest/tempest/.tox/venv/lib/python2.7/site-packages/testtools/testcase.py", line 498, in assertThat
raise mismatch_error
'0', 'content-location': 'http://smithi183.front.sepia.ceph.com:80/v1/KEY_a313fc602fab4b6ab8aca85c5e52c227/tempest-TestContainer-1968721805', u'accept-ranges': 'bytes', u'x-storage-policy': 'default-placement', u'x-container-bytes-used-actual': '0', u'last-modified': 'Mon, 18 Nov 2019 13:20:49 GMT', u'connection': 'close', u'x-timestamp': '1574083249.39076', u'date': 'Mon, 18 Nov 2019 13:20:49 GMT', u'x-trans-id': 'tx0000000000000000001e8-005dd29ab1-1083-default', u'x-container-bytes-used': '0', u'x-container-meta-test-container-meta': 'Meta1', u'content-type': 'application/json; charset=utf-8', u'x-openstack-request-id': 'tx0000000000000000001e8-005dd29ab1-1083-default'} matches Contains('x-container-meta-test-container-meta')

tempest.api.object_storage.test_container_services.ContainerTest.test_create_container_with_remove_metadata_value[id-8a21ebad-a5c7-4e29-b428-384edc8cd156]
----------------------------------------------------------------------------------------------------------------------------------------------------------

Captured traceback:
~~~~~~~~~~~~~~~~~
Traceback (most recent call last):
File "/home/ubuntu/cephtest/tempest/tempest/api/object_storage/test_container_services.py", line 116, in test_create_container_with_remove_metadata_value
self.assertNotIn('x-container-meta-test-container-meta', resp)
File "/home/ubuntu/cephtest/tempest/.tox/venv/lib/python2.7/site-packages/testtools/testcase.py", line 455, in assertNotIn
self.assertThat(haystack, matcher, message)
File "/home/ubuntu/cephtest/tempest/.tox/venv/lib/python2.7/site-packages/testtools/testcase.py", line 498, in assertThat
raise mismatch_error
testtools.matchers._impl.MismatchError: {'status': '204', u'x-storage-class': 'STANDARD', u'x-container-object-count': '0', 'content-location': 'http://smithi183.front.sepia.ceph.com:80/v1/KEY_a313fc602fab4b6ab8aca85c5e52c227/tempest-TestContainer-1017704309', u'accept-ranges': 'bytes', u'x-storage-policy': 'default-placement', u'x-container-bytes-used-actual': '0', u'last-modified': 'Mon, 18 Nov 2019 13:20:51 GMT', u'connection': 'close', u'x-timestamp': '1574083251.43572', u'date': 'Mon, 18 Nov 2019 13:20:51 GMT', u'x-trans-id': 'tx000000000000000000212-005dd29ab3-1083-default', u'x-container-bytes-used': '0', u'x-container-meta-test-container-meta': 'Meta1', u'content-type': 'application/json; charset=utf-8', u'x-openstack-request-id': 'tx000000000000000000212-005dd29ab3-1083-default'} matches Contains('x-container-meta-test-container-meta')

Actions #1

Updated by Casey Bodley over 4 years ago

  • Status changed from New to 12
Actions #2

Updated by Patrick Donnelly over 4 years ago

  • Status changed from 12 to New
Actions #3

Updated by Yehuda Sadeh over 4 years ago

Note that it's a create with update metadata, so the test tries to create a bucket (PUT, not POST) with X-Remove-Container-Meta, which apparently supposed to work in swift.

Actions #4

Updated by Yehuda Sadeh over 4 years ago

Just to clarify my previous comment, this is not a new functionality, we used to support it.

Actions #5

Updated by Yehuda Sadeh over 4 years ago

  • Status changed from New to In Progress
  • Pull request ID set to 32121
Actions #6

Updated by Casey Bodley over 4 years ago

  • Status changed from In Progress to Fix Under Review
Actions #7

Updated by Daniel Gryniewicz over 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF