rgw: svc/bucket_sobj: return -EEXIST at store_bucket_entrypoint_info

Fixes: https://tracker.ceph.com/issues/42869

This is needed by caller (specifically needed for updating
bucket metadata through swift create bucket operation).

Signed-off-by: Yehuda Sadeh <yehuda@redhat.com>